k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: learning-k8s-service
spec:
  selector:
    app: learning-k8s
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: NodePort
