k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
      nginx.ingress.kubernetes.io/use-regex: "true"
      nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: learning-k8s.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /k8s(/|$)(.*)
            backend:
              service:
                name: learning-k8s-service
                port:
                  number: 8080
